--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,11 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="js/idb.js"></script>
     <script src="js/index.js"></script>
+    <script type="text/javascript">
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./service-worker.js");
+      }
+    </script>
   </body>
 
 </html>
